--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -54,7 +54,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('py4ds')",
+   "display_name": "Python 3.9.13 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -68,11 +68,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "befcf506a876d6362e0cd34de79eb86eebfa7d4d21bfcef4da92e76fa5813bee"
+    "hash": "a170f8f48360208c1ef97d111efd372fa56bc4242fd6dde68f0b4a8cccd189d0"
    }
   }
  },
